# QuantyDatabase

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/quanty-core/: Cargo.toml
crates/quanty-core/src/: btree.rs  cache.rs  commit.rs  db.rs  encoding.rs  error.rs  freelist.rs  lib.rs  meta.rs  node.rs  page.rs  pager.rs  refs.rs  storage.rs
crates/quanty-core/tests/: branch_gc_tests.rs  btree_model.rs  crash_harness.rs  db_tests.rs  heavy.rs  pager_tests.rs
crates/quanty-core/tests/common/: mod.rs
crates/quanty-exec/: Cargo.toml
crates/quanty-exec/src/: catalog.rs  error.rs  exec.rs  lib.rs  plan.rs  value_ops.rs  verify.rs
crates/quanty-exec/tests/: golden.rs  index_consistency.rs  join_model.rs  txn_crash.rs
crates/quanty-exec/tests/common/: mod.rs
crates/quanty-exec/tests/golden/: 01_tables.qql  02_put_get.qql  03_where.qql  04_order_limit.qql  05_set_del.qql  06_index.qql  07_explain.qql  08_types.qql  09_errors.qql  10_math.qql  11_branches.qql  12_merge.qql  13_time_travel.qql  14_log_gc.qql  15_joins.qql  16_txn.qql  sql_01_tables.sql  sql_02_put_get.sql  sql_03_where.sql  sql_04_order_limit.sql  sql_05_set_del.sql  sql_06_index.sql  sql_07_explain.sql  sql_08_types.sql  sql_09_errors.sql  sql_10_math.sql  sql_11_dialect.sql  sql_12_unsupported.sql  sql_15_joins.sql  sql_16_txn.sql
crates/quanty-ql/: Cargo.toml
crates/quanty-ql/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  pretty.rs
crates/quanty-ql/tests/: parser_fuzz.rs  (+1 more)
docs/: ARCHITECTURE.md  DECISIONS.md  FORMAT.md  QQL.md  ROADMAP.md  SQL.md
(+3 files in other folders)
