[workspace]
members = ["crates/quanty-core", "crates/quanty-ql", "crates/quanty-exec"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
license = "MIT"
repository = "https://github.com/QuantyRoot/QuantyDatabase"

[profile.release]
lto = "thin"
codegen-units = 1
