[package]
name = "quanty-core"
description = "Storage core of QuantyDB: pager, copy-on-write pages, commits"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

# Dependency budget for this crate is deliberately tiny (see docs/DECISIONS.md,
# ADR-008). Think twice, then write an ADR, before adding anything here.
[dependencies]
crc32c = "0.6"
parking_lot = "0.12"

